code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_89.wast
(assert_invalid
  (module (func $type-block-value-nested-unreachable-void-vs-num (result i32)
    (block (block (unreachable)))
  ))
  "type mismatch"
)